--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
     "class-variance-authority": "^0.7.1",
     "lodash.throttle": "^4.1.1",
